--- a/src/boinc-6.10.58/Makefile
+++ b/src/boinc-6.10.58/Makefile
@@ -160,14 +160,14 @@ DIST_ARCHIVES = $(distdir).tar.gz $(distdir).zip
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run aclocal-1.11
 ALLOCA = 
-AMTAR = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run tar
+AMTAR = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run tar
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run automake-1.11
 AWK = gawk
 BOINC_EXTRA_LIBS =  -L/data/local/tmp/lib -lcurl -L/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm//usr/lib -lssl -lcrypto -ldl -ldl -lz
 BOINC_MAJOR_VERSION = 6
@@ -176,7 +176,7 @@ BOINC_RELEASE = 58
 BOINC_VERSION_STRING = 6.10.58
 CC = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin//arm-linux-androideabi-gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -I/data/local/tmp/include -mthumb
+CFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -I/data/local/tmp/include
 CLIENTGUIFLAGS = 
 CLIENTGUILIBS =   
 CLIENTLIBS = -lm 
@@ -188,7 +188,7 @@ CPPFLAGS = -I/data/local/tmp/include -DANDROID=1 -I/home/mat/docs/dev/mobile/and
 CXX = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin//arm-linux-androideabi-g++
 CXXCPP = /lib/cpp
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -fexceptions -mthumb
+CXXFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -fexceptions
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -231,7 +231,7 @@ LN = /bin/ln
 LN_S = ln -s
 LOGNAME = mat
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MYSQL_CFLAGS = 
 MYSQL_CONFIG = 
@@ -255,7 +255,7 @@ PTHREAD_CC = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-andr
 PTHREAD_CFLAGS = 
 PTHREAD_LIBS = 
 RANLIB = ranlib
-RDATE = 2011.05.21
+RDATE = 2011.07.08
 REV = 
 SET_MAKE = 
 SHELL = /bin/sh
@@ -266,7 +266,7 @@ SSL_CFLAGS =
 SSL_CXXFLAGS =  
 SSL_LIBS = -lssl -lcrypto -ldl
 STRIP = strip
-TOP_BUILD_DIR = /home/mat/docs/src/android/boinc-6.10.58
+TOP_BUILD_DIR = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
 VERSION = 6.10.58
 WHOAMI = /usr/bin/whoami
 WX_CFLAGS = 
@@ -283,10 +283,10 @@ X_CFLAGS =
 X_EXTRA_LIBS = 
 X_LIBS =  -L/usr/lib
 X_PRE_LIBS = 
-abs_builddir = /home/mat/docs/src/android/boinc-6.10.58
-abs_srcdir = /home/mat/docs/src/android/boinc-6.10.58
-abs_top_builddir = /home/mat/docs/src/android/boinc-6.10.58
-abs_top_srcdir = /home/mat/docs/src/android/boinc-6.10.58
+abs_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
+abs_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
+abs_top_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
+abs_top_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
 ac_ct_CC = 
 ac_ct_CXX = 
 ac_ct_F77 = gfortran
@@ -318,7 +318,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/install-sh
+install_sh = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
