--- a/src/boinc-6.10.58/client/Makefile
+++ b/src/boinc-6.10.58/client/Makefile
@@ -156,14 +156,14 @@ DIST_SOURCES = $(boinc_client_SOURCES) $(boinccmd_SOURCES) \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run aclocal-1.11
 ALLOCA = 
-AMTAR = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run tar
+AMTAR = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run tar
 AR = ar
 AS = as
-AUTOCONF = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run automake-1.11
 AWK = gawk
 BOINC_EXTRA_LIBS =  -L/data/local/tmp/lib -lcurl -L/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm//usr/lib -lssl -lcrypto -ldl -ldl -lz
 BOINC_MAJOR_VERSION = 6
@@ -172,10 +172,10 @@ BOINC_RELEASE = 58
 BOINC_VERSION_STRING = 6.10.58
 CC = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin//arm-linux-androideabi-gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -I/data/local/tmp/include -mthumb
+CFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -I/data/local/tmp/include
 CLIENTGUIFLAGS = 
 CLIENTGUILIBS =   
-CLIENTLIBS = -lm /home/mat/docs/dev/mobile/android-ndk-r5b/sources/cxx-stl/gnu-libstdc++/libs/armeabi/libstdc++.a
+CLIENTLIBS = -lm 
 CLIENT_BIN_FILENAME = boinc
 CLIENT_CMD_BIN_FILENAME = boinccmd
 CLIENT_GUI_BIN_FILENAME = boincmgr
@@ -184,7 +184,7 @@ CPPFLAGS = -I/data/local/tmp/include -DANDROID=1 -I/home/mat/docs/dev/mobile/and
 CXX = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin//arm-linux-androideabi-g++
 CXXCPP = /lib/cpp
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -fexceptions -mthumb
+CXXFLAGS = --sysroot=/home/mat/docs/dev/mobile/android-ndk-r5b/platforms/android-8/arch-arm/ -Wall -O2 -funroll-loops -fexceptions
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -227,7 +227,7 @@ LN = /bin/ln
 LN_S = ln -s
 LOGNAME = mat
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MYSQL_CFLAGS = 
 MYSQL_CONFIG = 
@@ -251,7 +251,7 @@ PTHREAD_CC = /home/mat/docs/dev/mobile/android-ndk-r5b/toolchains/arm-linux-andr
 PTHREAD_CFLAGS = 
 PTHREAD_LIBS = 
 RANLIB = ranlib
-RDATE = 2011.05.21
+RDATE = 2011.07.08
 REV = 
 SET_MAKE = 
 SHELL = /bin/sh
@@ -262,7 +262,7 @@ SSL_CFLAGS =
 SSL_CXXFLAGS =  
 SSL_LIBS = -lssl -lcrypto -ldl
 STRIP = strip
-TOP_BUILD_DIR = /home/mat/docs/src/android/boinc-6.10.58
+TOP_BUILD_DIR = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
 VERSION = 6.10.58
 WHOAMI = /usr/bin/whoami
 WX_CFLAGS = 
@@ -279,10 +279,10 @@ X_CFLAGS =
 X_EXTRA_LIBS = 
 X_LIBS =  -L/usr/lib
 X_PRE_LIBS = 
-abs_builddir = /home/mat/docs/src/android/boinc-6.10.58/client
-abs_srcdir = /home/mat/docs/src/android/boinc-6.10.58/client
-abs_top_builddir = /home/mat/docs/src/android/boinc-6.10.58
-abs_top_srcdir = /home/mat/docs/src/android/boinc-6.10.58
+abs_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/client
+abs_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/client
+abs_top_builddir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
+abs_top_srcdir = /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58
 ac_ct_CC = 
 ac_ct_CXX = 
 ac_ct_F77 = gfortran
@@ -314,7 +314,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/mat/docs/src/android/boinc-6.10.58/install-sh
+install_sh = ${SHELL} /home/mat/docs/src/android/native-boinc-for-android/src/boinc-6.10.58/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -442,9 +442,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am $(top_srcdir)/Makefile.incl $(am__
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu client/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign client/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu client/Makefile
+	  $(AUTOMAKE) --foreign client/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
