--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="2"
-      android:versionName="0.1.2a">
+      android:versionCode="3"
+      android:versionName="0.1.3a">
     <uses-sdk android:minSdkVersion="4" />
 
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
@@ -93,6 +93,15 @@
 		<activity android:name=".ScreenLockActivity"
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 			android:screenOrientation="landscape" />
+		
+		<activity android:name=".UpdateActivity"
+			android:screenOrientation="portrait"
+			android:label="@string/updateBinaries" />
+			
+		<activity android:name=".ShutdownDialogActivity"
+			android:screenOrientation="portrait"
+			android:launchMode="singleInstance"
+			android:theme="@android:style/Theme.Dialog" />
 	</application>
     
 </manifest>
