--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="5"
-      android:versionName="0.1.3.2a">
+      android:versionCode="6"
+      android:versionName="0.2a">
     <uses-sdk android:minSdkVersion="4" />
 
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
@@ -16,12 +16,13 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.BATTERY_STATS" />
 
 	<application
 		android:name="BoincManagerApplication"
 		android:label="@string/app_name"
 		android:description="@string/app_desc"
-		android:icon="@drawable/nativeboinc" android:debuggable="false">
+		android:icon="@drawable/nativeboinc" android:debuggable="true">
 
 		<activity android:name=".BoincManagerActivity">
 			<intent-filter>
@@ -102,6 +103,10 @@
 			android:screenOrientation="portrait"
 			android:launchMode="singleInstance"
 			android:theme="@android:style/Theme.Dialog" />
+		
+		<activity android:name=".LocalPreferencesActivity"
+			android:screenOrientation="portrait"
+			android:label="@string/localPreferences" />
 	</application>
     
 </manifest>
