--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="sk.boinc.nativeboinc"
-      android:versionCode="7"
-      android:versionName="0.2.1a">
+      android:versionCode="8"
+      android:versionName="0.2.2a">
     <uses-sdk android:minSdkVersion="4" />
 
     <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
@@ -85,7 +85,9 @@
 		
 		<activity android:name=".InstallWizardActivity"
 			android:screenOrientation="portrait"
-			android:label="@string/installWizard" />
+			android:launchMode="singleTask"
+			android:label="@string/installWizard"
+			android:configChanges="keyboard|keyboardHidden|screenLayout|navigation|touchscreen" />
 		
 		<activity android:name=".AccessPasswordActivity"
 			android:screenOrientation="portrait"
