--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -15,6 +15,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.BATTERY_STATS" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application
 		android:name="BoincManagerApplication"
@@ -57,6 +58,14 @@
 		<activity android:name=".NativeClientActivity"
 			android:label="@string/menuNativeClient"
 			android:launchMode="singleTop" />
+		
+		<activity android:name=".AccessListActivity"
+			android:label="@string/accessHostList"
+			android:launchMode="singleTop" />
+		
+		<activity android:name=".InstalledBinariesActivity"
+		    android:label="@string/installedBinaries"
+		    android:launchMode="singleTop" />
 		
 		<activity android:name=".AppPreferencesActivity"
 			android:label="@string/menuPreferences"
@@ -105,10 +114,6 @@
 		<activity android:name=".ProgressActivity"
 			android:launchMode="singleTop"
 			android:label="@string/installingUpdating" />
-		
-		<activity android:name=".AccessPasswordActivity"
-			android:label="@string/changeAccessPassword"
-			android:launchMode="singleTop" />
 		
 		<activity android:name=".ScreenLockActivity"
 			android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
