--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -63,6 +63,10 @@
 			android:label="@string/accessHostList"
 			android:launchMode="singleTop" />
 		
+		<activity android:name=".BoincLogsActivity"
+			android:label="@string/nativeBoincLogs"
+			android:launchMode="singleTop" />
+		
 		<activity android:name=".InstalledBinariesActivity"
 		    android:label="@string/installedBinaries"
 		    android:launchMode="singleTop" />
