NativeBOINC: fixed stupid bug on the unpacking project applications (solved 'Text file busy' error on the first starting after install/update project apps). Added new message when client monitor fails.

--- a/src/NativeBOINC/AndroidManifest.xml
+++ b/src/NativeBOINC/AndroidManifest.xml
@@ -181,6 +181,10 @@
 			android:launchMode="singleInstance"
 			android:theme="@style/StandaloneDialog" />
 		
+		<activity android:name=".ClientMonitorErrorActivity"
+			android:launchMode="singleInstance"
+			android:theme="@style/StandaloneDialog" />
+		
 		<activity android:name=".TaskInfoDialogActivity"
 			android:launchMode="singleInstance"
 			android:theme="@style/StandaloneDialog" />
